--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,16 @@
 /*  your css code here. If applicable */
+.container{
+	display: flex;
+	justify-content: center;
+	align-content: center;
+}
+
+.box{
+	border: 2px solid black;
+	
+}
+
+p{
+	color: purple;
+	padding: 50px;
+}
