--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,21 @@
 /*  your css code here. If applicable */
 .container{
+	height: 100vh;
+	width: 100vh;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 }
 
 .box{
-	border: 2px solid black;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	
+	border: 2px solid black;
+	background-color: lightblue;
+	height: 200px;
+	width: 200px;
 }
 
 p{
